Fix CWE-543 hard-coded DB password defaults